# oc4ids-datastore-pipeline

./: .devcontainer.json  .env.test  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: build-and-push-image.yml  ci.yml  create-release.yml  create-tag.yml
migrations/: env.py
migrations/versions/: 084c39bf418e_add_csv_and_xlsx_columns_to_dataset_.py  3499656b84e7_allow_nullable_json_url.py  8182d8c386f7_rename_column_license_name_to_license_.py  85905d23accc_add_license_columns_to_dataset_table.py  aaabf849b37f_create_dataset_table.py  b21b5de6ee2d_add_publisher_country_column.py  cde761a59c2f_add_portals.py  ebb26242c904_add_license_title_short_column.py
oc4ids_datastore_pipeline/: __init__.py  database.py  notifications.py  pipeline.py  registry.py  storage.py
tests/: conftest.py  test_database.py  test_notifications.py  test_pipeline.py  test_registry.py  test_storage.py
