[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oc4ids-datastore-pipeline"
description = "OC4IDS Datastore Pipeline"
version = "1.0.0"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "Flake8-pyproject",
  "mypy",
  "pytest",
]

[project.scripts]
oc4ids-datastore-pipeline = "oc4ids_datastore_pipeline.pipeline:run"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.mypy]
strict = true
