[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oc4ids-datastore-pipeline"
description = "OC4IDS Datastore Pipeline"
version = "0.3.0"
readme = "README.md"
dependencies = [
  "alembic",
  "boto3",
  "flattentool",
  "libcoveoc4ids",
  "psycopg2",
  "python-dotenv",
  "requests",
  "sqlalchemy",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "Flake8-pyproject",
  "mypy",
  "pytest",
  "pytest-mock",
  "types-boto3",
  "types-requests",
]

[project.scripts]
oc4ids-datastore-pipeline = "oc4ids_datastore_pipeline.pipeline:run"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["libcoveoc4ids.*", "flattentool.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
